# SimpleCameraApp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  camera.qrc
.github/workflows/: cmake.yml
Base/: CMakeLists.txt
Base/include/: image_save.h  mainWindow.h  videoIO.h
Base/src/: image_save.cpp  main.cpp  mainWindow.cpp  tz.cpp  videoIO.cpp
setup/: setup.md
